feat: disable viewport scaling and update to new responsive CSS styles

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Sahabat Nusantara 🇮🇩</title>
     
     <!-- Favicon -->
@@ -17,7 +17,7 @@
     <meta name="author" content="Sahabat Nusantara" />
     <meta name="theme-color" content="#d9534f" />
     
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-new.css" />
   </head>
   <body>
     <div class="chat-container">
